services：ExporterNginxConfig.reload无界waitFor+管道不消费，挂起命令冻结导出worker
问题：
- 521299974引入的回归：reload()改p.waitFor()无超时，且Runtime.exec子进程输出
  管道无人读——reload命令挂起（脚本等锁/等输入）或输出填满OS管道缓冲（经典
  exec管道死锁，命令即使会正常结束也永远等不完）时，Exporter.onEdit的
  one-by-one单worker永久阻塞：所有后续SM事件停摆、failedServices补偿同worker
  永不运行，所有服务的nginx配置静默陈旧。比原fire-and-forget更糟。

修复：
- ProcessBuilder + 输出/错误DISCARD（无管道即无死锁面）+ waitFor(30s)有界等待
  +超时destroyForcibly告警；退出码非零记error保留。注意ProcessBuilder不像
  Runtime.exec(String)按空白切分——显式split保持带参命令语义。

验证：
- 新增testReloadCommandWithArgsCompletes：reload="java -version"（带参+stderr
  输出）exportAll正常返回且导出不中断。撤销split后该用例变红（整串当可执行名
  start抛IOException）；30s超时分支不可在@Fast内构造，为结构修复代码级复核。
  TestExporterNginx* 6/6通过。